# mlt-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml  publish.yml
mlt_cli/: __init__.py  __main__.py  main.py  restructure.py
tests/: test_cli.py
