[tool.poetry]
name = "mlt-cli"
version = "0.1.0"
description = "Tools to help you manage your local music library."
keywords = ["mp3", "id3v2", "kid3", "music", "tools"]
homepage = "https://nascentmaker.com/py/mlt-cli"
repository = "https://github.com/NascentMaker/mlt-cli"
authors = ["Torgny Bjers <torgny@bjers.org>"]
maintainers = ["Nascent Maker <hello@nascentmaker.com>", "Torgny Bjers <torgny@bjers.org>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "mlt_cli" }
]
include = ["README.rst", "LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.scripts]
mlt-cli = "mlt_cli.main:main"

[tool.poetry.plugins."cliff.mlt_cli"]
restructure = "mlt_cli.restructure:Restructure"

[tool.poetry.dependencies]
python = "^3.8"
cliff = "^4.2.0"
gnureadline = {version = "^8.1.2", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
pyreadline3 = {version = "^3.4.1", markers = "sys_platform == 'windows'"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"
tox = "^4.4.6"
coverage = "^7.2.5"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-q",
]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
fail-under = 10
jobs = 0
py-version = "3.8"

[tool.pylint.format]
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
max-line-length = 120
